# openaec-cloud-desktop

./: .gitattributes  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: cf_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cloudfilter.rs  lib.rs  main.rs  sync.rs  webdav.rs
src/lib/: api.ts
